<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bfusa.quickmark.MainActivity">

    <TextureView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_transparent"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainBackground"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/quizzesButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@color/transparentWhite"
        android:text="@string/quizzes_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/studentsButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparentWhite"
        android:text="@string/students_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/quizzesButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/classesButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparentWhite"
        android:text="@string/classes_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/studentsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/twentyButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:background="@color/transparentWhite"
        android:text="@string/twenty_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/fiftyButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparentWhite"
        android:text="@string/fifty_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/twentyButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/hundredButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparentWhite"
        android:text="@string/hundred_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appNameTextView"
        app:layout_constraintStart_toStartOf="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/fiftyButton"
        app:layout_constraintVertical_bias="0.0" />



</android.support.constraint.ConstraintLayout>
